--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
 
 
-    
+    <form>
+        <label for="Name">Name</label>
+        <input type="text" name="Name" id="name" placeholder="Enter Your Name">
+        <input type="submit">
+    </form>
 </body>
 </html>
