--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
 
 
-
+    <form action="">
+        <label for="name">Name</label>
+        <input type="text" name="name" placeholder="Enter Your Name">
+        <input type="submit">
+    </form>
 
 
 
